# kubeflare

./: .dockerignore  .gitignore  Cargo.toml  Makefile.toml  skaffold.yaml
cloudflare/: Cargo.toml
core/: Cargo.toml
dev/manifests/base/: kustomization.yaml
dev/manifests/base/controller/: deployment.yaml
dockerfiles/: amd64.dockerfile
docs/: tunnel_crd_example.yaml
k8s/api/: Cargo.toml
k8s/api/src/: tunnel.rs
k8s/index/: Cargo.toml
src/: main.rs
