[package]
name = "kubeflare-controller"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
kubeflare-controller-core = { path = "./core" }
kubeflare-controller-cloudflare = { path = "./cloudflare" }
kubeflare-controller-k8s-api = { path = "./k8s/api" }
kubeflare-controller-k8s-index = { path = "./k8s/index" }
anyhow = "1"
drain = "0.1"
kube = { version = "0.60.0", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tokio = { version = "1", features = ["macros", "parking_lot", "rt", "rt-multi-thread", "signal", "sync"] }